all data is cleaned, no null values left, date features transformed in separated year/month float types. Clean_data csv created

--- a/PlayStation_Data_report.ipynb
+++ b/PlayStation_Data_report.ipynb
@@ -1083,22 +1083,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7f2a52b0",
-   "metadata": {},
-   "source": [
-    "SO WE HAVE 4963 TOTAL ROWS, WE ALSO HAVE 2160 MISSING VALUES FOR GENRES SO WE CAN'T JUST DROP THE VALUES FOR THAT BECAUSE HALF OF THE DATA WILL BE LOST"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bfdeed1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 121,
    "id": "d4c54055",
@@ -1108,51 +1092,6 @@
     "play_station_raw_data[\"Last Update\"] = pd.to_datetime(play_station_raw_data['Last Update'], errors='coerce')\n",
     "play_station_raw_data[\"Last Update Year\"] = play_station_raw_data[\"Last Update\"].dt.year\n",
     "play_station_raw_data[\"Last Update Month\"] = play_station_raw_data[\"Last Update\"].dt.month"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "id": "83bfd8c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4963 entries, 0 to 4962\n",
-      "Data columns (total 21 columns):\n",
-      " #   Column             Non-Null Count  Dtype         \n",
-      "---  ------             --------------  -----         \n",
-      " 0   Game               4963 non-null   object        \n",
-      " 1   Console            4963 non-null   object        \n",
-      " 2   Name               4963 non-null   object        \n",
-      " 3   Publisher          4963 non-null   object        \n",
-      " 4   Developer          4963 non-null   object        \n",
-      " 5   Total Shipped      4963 non-null   float64       \n",
-      " 6   Total Sales        4963 non-null   float64       \n",
-      " 7   NA Sales           4963 non-null   float64       \n",
-      " 8   PAL Sales          4963 non-null   float64       \n",
-      " 9   Japan Sales        4963 non-null   float64       \n",
-      " 10  Other Sales        4963 non-null   float64       \n",
-      " 11  Last Update        2801 non-null   datetime64[ns]\n",
-      " 12  rating             4963 non-null   float64       \n",
-      " 13  ratings_count      4963 non-null   float64       \n",
-      " 14  metacritic         4963 non-null   float64       \n",
-      " 15  genres             2803 non-null   object        \n",
-      " 16  platforms          2847 non-null   object        \n",
-      " 17  Release Year       4963 non-null   float64       \n",
-      " 18  Release Month      4963 non-null   float64       \n",
-      " 19  Last Update Year   2801 non-null   float64       \n",
-      " 20  Last Update Month  2801 non-null   float64       \n",
-      "dtypes: datetime64[ns](1), float64(13), object(7)\n",
-      "memory usage: 814.4+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "play_station_raw_data.info()"
    ]
   },
   {
@@ -1210,6 +1149,192 @@
    "metadata": {},
    "source": [
     "I'VE COMPLETED THE LAST UPDATE YEAR AND LAST UPDATE MONTH WITH THE MISSING VALUES. I'VE ASSIGNED THE VALUES THAR WERE MISSING THE MEDIAN FOUND IN THE NON-NULL VALUES, GROUPED BY DEVELOPER AND PUBLISHER (LOGIC: SAME DEVELOPER WILL RELEASE UPDATES IN THE SAME PERIOD FOR DIFFERENT GAMES, SO IF IT IS ALSO THE SAME PUBLISHER THE CHANCES FOR GAMES TO HAVE UPDATES IN THE SAME YEAR ARE HIGHER)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f2a52b0",
+   "metadata": {},
+   "source": [
+    "SO WE HAVE 4963 TOTAL ROWS, WE ALSO HAVE MISSING VALUES FOR PLATFORMS SO WE CAN'T JUST DROP THE VALUES FOR THAT BECAUSE HALF OF THE DATA WILL BE LOST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "6b1b2863",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4963 entries, 0 to 4962\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column             Non-Null Count  Dtype         \n",
+      "---  ------             --------------  -----         \n",
+      " 0   Game               4963 non-null   object        \n",
+      " 1   Console            4963 non-null   object        \n",
+      " 2   Name               4963 non-null   object        \n",
+      " 3   Publisher          4963 non-null   object        \n",
+      " 4   Developer          4963 non-null   object        \n",
+      " 5   Total Shipped      4963 non-null   float64       \n",
+      " 6   Total Sales        4963 non-null   float64       \n",
+      " 7   NA Sales           4963 non-null   float64       \n",
+      " 8   PAL Sales          4963 non-null   float64       \n",
+      " 9   Japan Sales        4963 non-null   float64       \n",
+      " 10  Other Sales        4963 non-null   float64       \n",
+      " 11  Last Update        2801 non-null   datetime64[ns]\n",
+      " 12  rating             4963 non-null   float64       \n",
+      " 13  ratings_count      4963 non-null   float64       \n",
+      " 14  metacritic         4963 non-null   float64       \n",
+      " 15  genres             2803 non-null   object        \n",
+      " 16  platforms          4963 non-null   object        \n",
+      " 17  Release Year       4963 non-null   float64       \n",
+      " 18  Release Month      4963 non-null   float64       \n",
+      " 19  Last Update Year   4963 non-null   float64       \n",
+      " 20  Last Update Month  4963 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(13), object(7)\n",
+      "memory usage: 814.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "play_station_raw_data[\"platforms\"] = (\n",
+    "    play_station_raw_data.groupby([\"Publisher\", \"Developer\"])[\"platforms\"]\n",
+    "    .transform(lambda x: x.fillna(x.mode()[0]) if not x.mode().empty else x)\n",
+    ")\n",
+    "if not play_station_raw_data[\"platforms\"].mode().empty:  # THIS VERIFIES IF THERE IS A GLOBAL MODE, IF IT IS WE USE THAT AS A DATA FOR OUR \n",
+    "                                                         # PLATFORM FEATURE\n",
+    "    global_item = play_station_raw_data[\"platforms\"].mode()[0]\n",
+    "    play_station_raw_data[\"platforms\"] = play_station_raw_data[\"platforms\"].fillna(global_item)\n",
+    "\n",
+    "play_station_raw_data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d36e416",
+   "metadata": {},
+   "source": [
+    "WE CAN USE THE SAME METHOD FOR THE GENRES FEATURE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "4eaa524c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4963 entries, 0 to 4962\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column             Non-Null Count  Dtype         \n",
+      "---  ------             --------------  -----         \n",
+      " 0   Game               4963 non-null   object        \n",
+      " 1   Console            4963 non-null   object        \n",
+      " 2   Name               4963 non-null   object        \n",
+      " 3   Publisher          4963 non-null   object        \n",
+      " 4   Developer          4963 non-null   object        \n",
+      " 5   Total Shipped      4963 non-null   float64       \n",
+      " 6   Total Sales        4963 non-null   float64       \n",
+      " 7   NA Sales           4963 non-null   float64       \n",
+      " 8   PAL Sales          4963 non-null   float64       \n",
+      " 9   Japan Sales        4963 non-null   float64       \n",
+      " 10  Other Sales        4963 non-null   float64       \n",
+      " 11  Last Update        2801 non-null   datetime64[ns]\n",
+      " 12  rating             4963 non-null   float64       \n",
+      " 13  ratings_count      4963 non-null   float64       \n",
+      " 14  metacritic         4963 non-null   float64       \n",
+      " 15  genres             4963 non-null   object        \n",
+      " 16  platforms          4963 non-null   object        \n",
+      " 17  Release Year       4963 non-null   float64       \n",
+      " 18  Release Month      4963 non-null   float64       \n",
+      " 19  Last Update Year   4963 non-null   float64       \n",
+      " 20  Last Update Month  4963 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(13), object(7)\n",
+      "memory usage: 814.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "play_station_raw_data[\"genres\"] = (\n",
+    "    play_station_raw_data.groupby([\"Publisher\", \"Developer\"])[\"genres\"]\n",
+    "    .transform(lambda x: x.fillna(x.mode()[0]) if not x.mode().empty else x)\n",
+    ")\n",
+    "if not play_station_raw_data[\"genres\"].mode().empty:  # THIS VERIFIES IF THERE IS A GLOBAL MODE, IF IT IS WE USE THAT AS A DATA FOR OUR \n",
+    "                                                         # PLATFORM FEATURE\n",
+    "    global_item = play_station_raw_data[\"genres\"].mode()[0]\n",
+    "    play_station_raw_data[\"genres\"] = play_station_raw_data[\"genres\"].fillna(global_item)\n",
+    "\n",
+    "play_station_raw_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "db6caeb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del play_station_raw_data[\"Last Update\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ffa8f4a",
+   "metadata": {},
+   "source": [
+    "PERFECT! NOW WE HAVE CLEANED ALL THE DATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "d57b4d58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_play_station_data = play_station_raw_data.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74103531",
+   "metadata": {},
+   "source": [
+    "IF WE HAVE THE CLEAN DATA FATAFRAME, LET'S CONTINUE USING THAT NAME FOR A BETTER UNDERSTANDING, AND SAVE IT IN A CSV FILE BECAUSE NOW WE HAVE CLEAN DATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "69252af9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_play_station_data.to_csv(\"clean_PlayStation_Data_report.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e23f5e8",
+   "metadata": {},
+   "source": [
+    "COMPLETE THE FIRST PART OF THE PIPELINE: LOAD -> EXPLLORE -> CLEAN -> TRANSFORM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80c93388",
+   "metadata": {},
+   "source": [
+    "ANALYZE + VISUALIZATION"
    ]
   }
  ],
