--- a/PlayStation_Data_report.ipynb
+++ b/PlayStation_Data_report.ipynb
@@ -1160,9 +1160,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "216e9cc7",
+   "metadata": {},
+   "source": [
+    "WE CAN CREATE A FUNCTION FOR UPDATEING VALUES WITH MODES"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "6b1b2863",
+   "execution_count": null,
+   "id": "5bcbd94c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_missing_values_to_mode (df=None, column = None, group=None, fallback_global = True):\n",
+    "    result = (df.groupby(group)[column].transform(lambda x: x.fillna(x.mode()[0]) if not x.mode().empty else x)) \n",
+    "    # THIS VERIFIES IF THERE IS A          \n",
+    "    # GLOBAL MODE, IF IT IS WE USE THAT AS A DATA FOR OUR PLATFORM FEATURE\n",
+    "    if not df[column].mode().empty:\n",
+    "        global_item = df[column].mode()[0]\n",
+    "        result = df[column].fillna(global_item)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4ef748e",
+   "metadata": {},
+   "source": [
+    "NOW WE CAN CALL THE FUNCTION FOR BOTH PLATFORMS AND GENRES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "2d9c3ac9",
    "metadata": {},
    "outputs": [
     {
@@ -1171,44 +1204,37 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 4963 entries, 0 to 4962\n",
-      "Data columns (total 21 columns):\n",
-      " #   Column             Non-Null Count  Dtype         \n",
-      "---  ------             --------------  -----         \n",
-      " 0   Game               4963 non-null   object        \n",
-      " 1   Console            4963 non-null   object        \n",
-      " 2   Name               4963 non-null   object        \n",
-      " 3   Publisher          4963 non-null   object        \n",
-      " 4   Developer          4963 non-null   object        \n",
-      " 5   Total Shipped      4963 non-null   float64       \n",
-      " 6   Total Sales        4963 non-null   float64       \n",
-      " 7   NA Sales           4963 non-null   float64       \n",
-      " 8   PAL Sales          4963 non-null   float64       \n",
-      " 9   Japan Sales        4963 non-null   float64       \n",
-      " 10  Other Sales        4963 non-null   float64       \n",
-      " 11  Last Update        2801 non-null   datetime64[ns]\n",
-      " 12  rating             4963 non-null   float64       \n",
-      " 13  ratings_count      4963 non-null   float64       \n",
-      " 14  metacritic         4963 non-null   float64       \n",
-      " 15  genres             2803 non-null   object        \n",
-      " 16  platforms          4963 non-null   object        \n",
-      " 17  Release Year       4963 non-null   float64       \n",
-      " 18  Release Month      4963 non-null   float64       \n",
-      " 19  Last Update Year   4963 non-null   float64       \n",
-      " 20  Last Update Month  4963 non-null   float64       \n",
-      "dtypes: datetime64[ns](1), float64(13), object(7)\n",
-      "memory usage: 814.4+ KB\n"
+      "Data columns (total 20 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Game               4963 non-null   object \n",
+      " 1   Console            4963 non-null   object \n",
+      " 2   Name               4963 non-null   object \n",
+      " 3   Publisher          4963 non-null   object \n",
+      " 4   Developer          4963 non-null   object \n",
+      " 5   Total Shipped      4963 non-null   float64\n",
+      " 6   Total Sales        4963 non-null   float64\n",
+      " 7   NA Sales           4963 non-null   float64\n",
+      " 8   PAL Sales          4963 non-null   float64\n",
+      " 9   Japan Sales        4963 non-null   float64\n",
+      " 10  Other Sales        4963 non-null   float64\n",
+      " 11  rating             4963 non-null   float64\n",
+      " 12  ratings_count      4963 non-null   float64\n",
+      " 13  metacritic         4963 non-null   float64\n",
+      " 14  genres             4963 non-null   object \n",
+      " 15  platforms          4963 non-null   object \n",
+      " 16  Release Year       4963 non-null   float64\n",
+      " 17  Release Month      4963 non-null   float64\n",
+      " 18  Last Update Year   4963 non-null   float64\n",
+      " 19  Last Update Month  4963 non-null   float64\n",
+      "dtypes: float64(13), object(7)\n",
+      "memory usage: 775.6+ KB\n"
      ]
     }
    ],
    "source": [
-    "play_station_raw_data[\"platforms\"] = (\n",
-    "    play_station_raw_data.groupby([\"Publisher\", \"Developer\"])[\"platforms\"]\n",
-    "    .transform(lambda x: x.fillna(x.mode()[0]) if not x.mode().empty else x)\n",
-    ")\n",
-    "if not play_station_raw_data[\"platforms\"].mode().empty:  # THIS VERIFIES IF THERE IS A GLOBAL MODE, IF IT IS WE USE THAT AS A DATA FOR OUR \n",
-    "                                                         # PLATFORM FEATURE\n",
-    "    global_item = play_station_raw_data[\"platforms\"].mode()[0]\n",
-    "    play_station_raw_data[\"platforms\"] = play_station_raw_data[\"platforms\"].fillna(global_item)\n",
+    "play_station_raw_data[\"platforms\"] = set_missing_values_to_mode(df=play_station_raw_data, column=\"platforms\", group=[\"Publisher\", \"Developer\"])\n",
+    "play_station_raw_data[\"genres\"] = set_missing_values_to_mode(df=play_station_raw_data, column=\"genres\", group=[\"Publisher\", \"Developer\"])\n",
     "\n",
     "play_station_raw_data.info()"
    ]
@@ -1219,60 +1245,6 @@
    "metadata": {},
    "source": [
     "WE CAN USE THE SAME METHOD FOR THE GENRES FEATURE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "id": "4eaa524c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4963 entries, 0 to 4962\n",
-      "Data columns (total 21 columns):\n",
-      " #   Column             Non-Null Count  Dtype         \n",
-      "---  ------             --------------  -----         \n",
-      " 0   Game               4963 non-null   object        \n",
-      " 1   Console            4963 non-null   object        \n",
-      " 2   Name               4963 non-null   object        \n",
-      " 3   Publisher          4963 non-null   object        \n",
-      " 4   Developer          4963 non-null   object        \n",
-      " 5   Total Shipped      4963 non-null   float64       \n",
-      " 6   Total Sales        4963 non-null   float64       \n",
-      " 7   NA Sales           4963 non-null   float64       \n",
-      " 8   PAL Sales          4963 non-null   float64       \n",
-      " 9   Japan Sales        4963 non-null   float64       \n",
-      " 10  Other Sales        4963 non-null   float64       \n",
-      " 11  Last Update        2801 non-null   datetime64[ns]\n",
-      " 12  rating             4963 non-null   float64       \n",
-      " 13  ratings_count      4963 non-null   float64       \n",
-      " 14  metacritic         4963 non-null   float64       \n",
-      " 15  genres             4963 non-null   object        \n",
-      " 16  platforms          4963 non-null   object        \n",
-      " 17  Release Year       4963 non-null   float64       \n",
-      " 18  Release Month      4963 non-null   float64       \n",
-      " 19  Last Update Year   4963 non-null   float64       \n",
-      " 20  Last Update Month  4963 non-null   float64       \n",
-      "dtypes: datetime64[ns](1), float64(13), object(7)\n",
-      "memory usage: 814.4+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "play_station_raw_data[\"genres\"] = (\n",
-    "    play_station_raw_data.groupby([\"Publisher\", \"Developer\"])[\"genres\"]\n",
-    "    .transform(lambda x: x.fillna(x.mode()[0]) if not x.mode().empty else x)\n",
-    ")\n",
-    "if not play_station_raw_data[\"genres\"].mode().empty:  # THIS VERIFIES IF THERE IS A GLOBAL MODE, IF IT IS WE USE THAT AS A DATA FOR OUR \n",
-    "                                                         # PLATFORM FEATURE\n",
-    "    global_item = play_station_raw_data[\"genres\"].mode()[0]\n",
-    "    play_station_raw_data[\"genres\"] = play_station_raw_data[\"genres\"].fillna(global_item)\n",
-    "\n",
-    "play_station_raw_data.info()"
    ]
   },
   {
