--- a/PlayStation_Data_report.ipynb
+++ b/PlayStation_Data_report.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 204,
    "id": "fc9b7c79",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 205,
    "id": "a28c2edf",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "4       PC, Xbox One, Xbox 360, PlayStation 3, Wii U  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 206,
    "id": "47aa6d49",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
        "max    3.120000e+06     4.760000    7225.000000    97.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 207,
    "id": "f0e9c22a",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,8 +464,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "39be47e7",
+   "metadata": {},
+   "source": [
+    "I SAW THAT RELEASE DATE WAS AN OBJECT, SO FIRST THINK FIRST I CHANGE THAT IN A DATE TIME TYPE SO WE CAN USE IT MOREA EASILY IF WE WANT TO DO SOME ANALYZES ON DATES"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 208,
    "id": "3d32494a",
    "metadata": {},
    "outputs": [
@@ -493,7 +501,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,16 +513,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "39be47e7",
-   "metadata": {},
-   "source": [
-    "I SAW THAT RELEASE DATE WAS AN OBJECT, SO FIRST THINK FIRST I CHANGE THAT IN A DATE TIME TYPE SO WE CAN USE IT MOREA EASILY IF WE WANT TO DO SOME ANALYZES ON DATES"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 209,
    "id": "238c9549",
    "metadata": {},
    "outputs": [],
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 210,
    "id": "7472511d",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 211,
    "id": "bb0ba712",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
        "Name: min, dtype: float64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 212,
    "id": "1aa8c35c",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
        "Name: max, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 213,
    "id": "354edc2a",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 214,
    "id": "a7ccf395",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        " 'Other Sales']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 215,
    "id": "5b5f67b2",
    "metadata": {},
    "outputs": [],
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 216,
    "id": "782c0756",
    "metadata": {},
    "outputs": [
@@ -877,7 +877,7 @@
        "4  5880000.0     650000.0    2280000.0  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 217,
    "id": "7961ef6d",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 218,
    "id": "30d47396",
    "metadata": {},
    "outputs": [
@@ -962,12 +962,12 @@
        "metacritic              float64\n",
        "genres                   object\n",
        "platforms                object\n",
-       "Release Year            float64\n",
-       "Release Month           float64\n",
+       "Release Year              Int64\n",
+       "Release Month             Int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 219,
    "id": "75359143",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1008,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 220,
    "id": "f59fa227",
    "metadata": {},
    "outputs": [],
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 221,
    "id": "e33c05e7",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 222,
    "id": "d4c54055",
    "metadata": {},
    "outputs": [],
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 223,
    "id": "fac2438d",
    "metadata": {},
    "outputs": [
@@ -1140,6 +1140,15 @@
     "for update in last_update:\n",
     "    play_station_raw_data[update] = play_station_raw_data.groupby([\"Developer\",\"Publisher\"])[update].transform(lambda x:x.fillna(x.median()))\n",
     "    play_station_raw_data[update] = play_station_raw_data[update].fillna(play_station_raw_data[update].median())\n",
+    "\n",
+    "\n",
+    "def median_for_missing_numeric(df = None, group = None, columns = None):\n",
+    "    for column in columns:\n",
+    "        df[column] = df.groupby(group)[column].transform(lambda x:x.fillna(x.median()))\n",
+    "        df[column] = df[column].fillna(df[column].median())\n",
+    "    return df\n",
+    "\n",
+    "play_station_raw_data = median_for_missing_numeric(df=play_station_raw_data,group=[\"Developer\", \"Publisher\"], columns=last_update)\n",
     "play_station_raw_data.info()"
    ]
   },
@@ -1169,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "id": "5bcbd94c",
    "metadata": {},
    "outputs": [],
@@ -1194,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 225,
    "id": "2d9c3ac9",
    "metadata": {},
    "outputs": [
@@ -1204,31 +1213,32 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 4963 entries, 0 to 4962\n",
-      "Data columns (total 20 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   Game               4963 non-null   object \n",
-      " 1   Console            4963 non-null   object \n",
-      " 2   Name               4963 non-null   object \n",
-      " 3   Publisher          4963 non-null   object \n",
-      " 4   Developer          4963 non-null   object \n",
-      " 5   Total Shipped      4963 non-null   float64\n",
-      " 6   Total Sales        4963 non-null   float64\n",
-      " 7   NA Sales           4963 non-null   float64\n",
-      " 8   PAL Sales          4963 non-null   float64\n",
-      " 9   Japan Sales        4963 non-null   float64\n",
-      " 10  Other Sales        4963 non-null   float64\n",
-      " 11  rating             4963 non-null   float64\n",
-      " 12  ratings_count      4963 non-null   float64\n",
-      " 13  metacritic         4963 non-null   float64\n",
-      " 14  genres             4963 non-null   object \n",
-      " 15  platforms          4963 non-null   object \n",
-      " 16  Release Year       4963 non-null   float64\n",
-      " 17  Release Month      4963 non-null   float64\n",
-      " 18  Last Update Year   4963 non-null   float64\n",
-      " 19  Last Update Month  4963 non-null   float64\n",
-      "dtypes: float64(13), object(7)\n",
-      "memory usage: 775.6+ KB\n"
+      "Data columns (total 21 columns):\n",
+      " #   Column             Non-Null Count  Dtype         \n",
+      "---  ------             --------------  -----         \n",
+      " 0   Game               4963 non-null   object        \n",
+      " 1   Console            4963 non-null   object        \n",
+      " 2   Name               4963 non-null   object        \n",
+      " 3   Publisher          4963 non-null   object        \n",
+      " 4   Developer          4963 non-null   object        \n",
+      " 5   Total Shipped      4963 non-null   float64       \n",
+      " 6   Total Sales        4963 non-null   float64       \n",
+      " 7   NA Sales           4963 non-null   float64       \n",
+      " 8   PAL Sales          4963 non-null   float64       \n",
+      " 9   Japan Sales        4963 non-null   float64       \n",
+      " 10  Other Sales        4963 non-null   float64       \n",
+      " 11  Last Update        2801 non-null   datetime64[ns]\n",
+      " 12  rating             4963 non-null   float64       \n",
+      " 13  ratings_count      4963 non-null   float64       \n",
+      " 14  metacritic         4963 non-null   float64       \n",
+      " 15  genres             4963 non-null   object        \n",
+      " 16  platforms          4963 non-null   object        \n",
+      " 17  Release Year       4963 non-null   float64       \n",
+      " 18  Release Month      4963 non-null   float64       \n",
+      " 19  Last Update Year   4963 non-null   float64       \n",
+      " 20  Last Update Month  4963 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(13), object(7)\n",
+      "memory usage: 814.4+ KB\n"
      ]
     }
    ],
@@ -1249,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 226,
    "id": "db6caeb3",
    "metadata": {},
    "outputs": [],
@@ -1267,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 227,
    "id": "d57b4d58",
    "metadata": {},
    "outputs": [],
@@ -1285,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 228,
    "id": "69252af9",
    "metadata": {},
    "outputs": [],
@@ -1308,6 +1318,14 @@
    "source": [
     "ANALYZE + VISUALIZATION"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34b5d902",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
