--- a/PlayStation_Data_report.ipynb
+++ b/PlayStation_Data_report.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "id": "a28c2edf",
    "metadata": {},
    "outputs": [
@@ -244,6 +244,16 @@
    "source": [
     "play_station_raw_data = pd.read_csv(\"PlayStation Sales and Metadata (PS3PS4PS5) (Oct 2025).csv\")\n",
     "play_station_raw_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "72ffe072",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "play_station_raw_data_initial = pd.read_csv(\"PlayStation Sales and Metadata (PS3PS4PS5) (Oct 2025).csv\")"
    ]
   },
   {
@@ -1301,6 +1311,260 @@
    "outputs": [],
    "source": [
     "clean_play_station_data.to_csv(\"clean_PlayStation_Data_report.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "7dc4b501",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_quality_report(df, name=\"Dataset\"):\n",
+    "    \"\"\"Generează un raport de calitate a datelor.\"\"\"\n",
+    "    print(f\"\\n{'='*50}\")\n",
+    "    print(f\"DATA QUALITY REPORT: {name}\")\n",
+    "    print(f\"{'='*50}\\n\")\n",
+    "    \n",
+    "    print(f\"Total rows: {len(df):,}\")\n",
+    "    print(f\"Total columns: {len(df.columns)}\")\n",
+    "    print(f\"\\nMemory usage: {df.memory_usage(deep=True).sum() / 1024**2:.2f} MB\")\n",
+    "    \n",
+    "    # Completeness\n",
+    "    print(f\"\\n{'─'*50}\")\n",
+    "    print(\"COMPLETENESS\")\n",
+    "    print(f\"{'─'*50}\")\n",
+    "    missing = df.isnull().sum()\n",
+    "    missing_pct = (missing / len(df) * 100).round(2)\n",
+    "    \n",
+    "    quality_df = pd.DataFrame({\n",
+    "        'Missing': missing,\n",
+    "        'Missing %': missing_pct,\n",
+    "        'Complete %': 100 - missing_pct\n",
+    "    })\n",
+    "    quality_df = quality_df[quality_df['Missing'] > 0].sort_values('Missing', ascending=False)\n",
+    "    \n",
+    "    if len(quality_df) > 0:\n",
+    "        print(quality_df)\n",
+    "    else:\n",
+    "        print(\"✓ No missing values!\")\n",
+    "    \n",
+    "    # Duplicates\n",
+    "    print(f\"\\n{'─'*50}\")\n",
+    "    print(\"DUPLICATES\")\n",
+    "    print(f\"{'─'*50}\")\n",
+    "    duplicates = df.duplicated().sum()\n",
+    "    print(f\"Duplicate rows: {duplicates} ({duplicates/len(df)*100:.2f}%)\")\n",
+    "    \n",
+    "    return quality_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "id": "8171f6ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "DATA QUALITY REPORT: PlayStation Raw Data\n",
+      "==================================================\n",
+      "\n",
+      "Total rows: 4,963\n",
+      "Total columns: 18\n",
+      "\n",
+      "Memory usage: 3.17 MB\n",
+      "\n",
+      "──────────────────────────────────────────────────\n",
+      "COMPLETENESS\n",
+      "──────────────────────────────────────────────────\n",
+      "               Missing  Missing %  Complete %\n",
+      "metacritic        3433      69.17       30.83\n",
+      "Last Update       2162      43.56       56.44\n",
+      "genres            2160      43.52       56.48\n",
+      "rating            2116      42.64       57.36\n",
+      "ratings_count     2116      42.64       57.36\n",
+      "platforms         2116      42.64       57.36\n",
+      "Release Date      1437      28.95       71.05\n",
+      "\n",
+      "──────────────────────────────────────────────────\n",
+      "DUPLICATES\n",
+      "──────────────────────────────────────────────────\n",
+      "Duplicate rows: 0 (0.00%)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing</th>\n",
+       "      <th>Missing %</th>\n",
+       "      <th>Complete %</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>metacritic</th>\n",
+       "      <td>3433</td>\n",
+       "      <td>69.17</td>\n",
+       "      <td>30.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Last Update</th>\n",
+       "      <td>2162</td>\n",
+       "      <td>43.56</td>\n",
+       "      <td>56.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>genres</th>\n",
+       "      <td>2160</td>\n",
+       "      <td>43.52</td>\n",
+       "      <td>56.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rating</th>\n",
+       "      <td>2116</td>\n",
+       "      <td>42.64</td>\n",
+       "      <td>57.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ratings_count</th>\n",
+       "      <td>2116</td>\n",
+       "      <td>42.64</td>\n",
+       "      <td>57.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>platforms</th>\n",
+       "      <td>2116</td>\n",
+       "      <td>42.64</td>\n",
+       "      <td>57.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Release Date</th>\n",
+       "      <td>1437</td>\n",
+       "      <td>28.95</td>\n",
+       "      <td>71.05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Missing  Missing %  Complete %\n",
+       "metacritic        3433      69.17       30.83\n",
+       "Last Update       2162      43.56       56.44\n",
+       "genres            2160      43.52       56.48\n",
+       "rating            2116      42.64       57.36\n",
+       "ratings_count     2116      42.64       57.36\n",
+       "platforms         2116      42.64       57.36\n",
+       "Release Date      1437      28.95       71.05"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_quality_report(play_station_raw_data_initial, \"PlayStation Raw Data\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "8b6ba52e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "DATA QUALITY REPORT: PlayStation Clean Data\n",
+      "==================================================\n",
+      "\n",
+      "Total rows: 4,963\n",
+      "Total columns: 20\n",
+      "\n",
+      "Memory usage: 2.97 MB\n",
+      "\n",
+      "──────────────────────────────────────────────────\n",
+      "COMPLETENESS\n",
+      "──────────────────────────────────────────────────\n",
+      "✓ No missing values!\n",
+      "\n",
+      "──────────────────────────────────────────────────\n",
+      "DUPLICATES\n",
+      "──────────────────────────────────────────────────\n",
+      "Duplicate rows: 0 (0.00%)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing</th>\n",
+       "      <th>Missing %</th>\n",
+       "      <th>Complete %</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Missing, Missing %, Complete %]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_quality_report(clean_play_station_data, \"PlayStation Clean Data\")"
    ]
   },
   {
