SQL connection with sqlite to a (freshly created) playstation_ sales db

--- a/PlayStation_Data_report.ipynb
+++ b/PlayStation_Data_report.ipynb
@@ -1219,14 +1219,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 471,
    "id": "0f14f001",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 483,
+   "id": "ad211344",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:creating a db and a connection with sqlite for SQL interogations\n",
+      "INFO:__main__:DONE! creating a db and a connection with sqlite for SQL interogations\n"
+     ]
+    }
+   ],
+   "source": [
+    "logger.info(\"creating a db and a connection with sqlite for SQL interogations\")\n",
+    "conn = sqlite3.connect('playstation_sales.db')\n",
+    "logger.info(\"DONE! creating a db and a connection with sqlite for SQL interogations\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 484,
+   "id": "b4939683",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:creating the table and connecting it to the database\n",
+      "INFO:__main__:DONE! creating the table and connecting it to the database\n"
+     ]
+    }
+   ],
+   "source": [
+    "logger.info(\"creating the table and connecting it to the database\")\n",
+    "table_name = \"PlayStation_Games\"\n",
+    "df_playstation_clean.to_sql(\n",
+    "    name=table_name,\n",
+    "    con=conn,\n",
+    "    if_exists='replace',\n",
+    "    index=False\n",
+    ")\n",
+    "logger.info(\"DONE! creating the table and connecting it to the database\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 486,
+   "id": "bd4bd0d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:Checking if the connection is working properly\n",
+      "INFO:__main__:DONE! Checking if the connection is working properly\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4963</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Count\n",
+       "0   4963"
+      ]
+     },
+     "execution_count": 486,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logger.info(\"Checking if the connection is working properly\")\n",
+    "query_verify = \"SELECT COUNT(*) as Count FROM PlayStation_Games\"\n",
+    "row_count = pd.read_sql(query_verify, conn)\n",
+    "logger.info(\"DONE! Checking if the connection is working properly\")\n",
+    "row_count"
    ]
   },
   {
