--- a/PlayStation_Data_report.ipynb
+++ b/PlayStation_Data_report.ipynb
@@ -2010,10 +2010,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 530,
    "id": "c81e5a6a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:sql interogation on the table from database\n",
+      "INFO:__main__:Done! sql interogation on the table from database\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -2066,7 +2074,7 @@
        "2  Omega Force           55"
       ]
      },
-     "execution_count": 527,
+     "execution_count": 530,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2084,6 +2092,423 @@
     "dev_with_most_games = pd.read_sql(query_dev_most_games,conn)\n",
     "logger.info(\"Done! sql interogation on the table from database\")\n",
     "dev_with_most_games"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1d42484",
+   "metadata": {},
+   "source": [
+    "7) How many games are in each genre?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 533,
+   "id": "5541aeac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:sql interogation on the table from database\n",
+      "INFO:__main__:Done! sql interogation on the table from database\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>genres</th>\n",
+       "      <th>total_games</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adventure, Action</td>\n",
+       "      <td>2393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Action</td>\n",
+       "      <td>204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Shooter, Action</td>\n",
+       "      <td>203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sports</td>\n",
+       "      <td>156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Action, RPG</td>\n",
+       "      <td>129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358</th>\n",
+       "      <td>Action, Fighting, Simulation, Sports</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359</th>\n",
+       "      <td>Action, Fighting, Arcade, Family, Platformer</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>Action, Casual, Strategy, Simulation, Family, ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>Action, Casual, Sports, Indie, Massively Multi...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>Action, Casual, Arcade, Family, Platformer</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>363 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                genres  total_games\n",
+       "0                                    Adventure, Action         2393\n",
+       "1                                               Action          204\n",
+       "2                                      Shooter, Action          203\n",
+       "3                                               Sports          156\n",
+       "4                                          Action, RPG          129\n",
+       "..                                                 ...          ...\n",
+       "358               Action, Fighting, Simulation, Sports            1\n",
+       "359       Action, Fighting, Arcade, Family, Platformer            1\n",
+       "360  Action, Casual, Strategy, Simulation, Family, ...            1\n",
+       "361  Action, Casual, Sports, Indie, Massively Multi...            1\n",
+       "362         Action, Casual, Arcade, Family, Platformer            1\n",
+       "\n",
+       "[363 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 533,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_count_games_genre = \"\"\"\n",
+    "    SELECT genres, COUNT(Game) as total_games\n",
+    "    FROM PlayStation_Games\n",
+    "    GROUP BY genres\n",
+    "    ORDER BY total_games DESC\n",
+    "\"\"\"\n",
+    "logger.info(\"sql interogation on the table from database\")\n",
+    "count_games_per_genre = pd.read_sql(query_count_games_genre, conn)\n",
+    "logger.info(\"Done! sql interogation on the table from database\")\n",
+    "count_games_per_genre"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1322fe3a",
+   "metadata": {},
+   "source": [
+    "8)Which genre have the biggest average rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
+   "id": "4555ed6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:sql interogation on the table from database\n",
+      "INFO:__main__:Done! sql interogation on the table from database\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>genres</th>\n",
+       "      <th>avg_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Shooter, Puzzle</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            genres  avg_rating\n",
+       "0  Shooter, Puzzle         5.0"
+      ]
+     },
+     "execution_count": 536,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_biggest_avg_rating = \"\"\"\n",
+    "    SELECT genres, AVG(rating) as avg_rating\n",
+    "    FROM PlayStation_Games\n",
+    "    GROUP BY genres\n",
+    "    ORDER BY avg_rating DESC\n",
+    "    LIMIT 1 \n",
+    "\"\"\"\n",
+    "logger.info(\"sql interogation on the table from database\")\n",
+    "genre_biggest_avg_rating = pd.read_sql(query_biggest_avg_rating,conn)\n",
+    "logger.info(\"Done! sql interogation on the table from database\")\n",
+    "genre_biggest_avg_rating"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5148801",
+   "metadata": {},
+   "source": [
+    "9) How many games have been launched each year?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 545,
+   "id": "a73a4d38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:__main__:sql interogation on the table from database\n",
+      "INFO:__main__:Done! sql interogation on the table from database\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nr_of_games</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Release Year</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013</th>\n",
+       "      <td>235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009</th>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020</th>\n",
+       "      <td>171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2008</th>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007</th>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023</th>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006</th>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2026</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Nr_of_games\n",
+       "Release Year             \n",
+       "2022                  929\n",
+       "2017                  761\n",
+       "2011                  425\n",
+       "2015                  342\n",
+       "2014                  342\n",
+       "2016                  330\n",
+       "2018                  303\n",
+       "2013                  235\n",
+       "2012                  201\n",
+       "2010                  196\n",
+       "2009                  175\n",
+       "2020                  171\n",
+       "2008                  152\n",
+       "2019                  127\n",
+       "2007                   98\n",
+       "2021                   82\n",
+       "2023                   36\n",
+       "2006                   22\n",
+       "2025                   17\n",
+       "2024                   17\n",
+       "2026                    2"
+      ]
+     },
+     "execution_count": 545,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_games_each_year = \"\"\"\n",
+    "    SELECT [Release Year], COUNT(Game) as Nr_of_games\n",
+    "    FROM PlayStation_Games\n",
+    "    GROUP BY [Release Year]\n",
+    "    ORDER BY Nr_of_games DESC\n",
+    "\"\"\"\n",
+    "logger.info(\"sql interogation on the table from database\")\n",
+    "total_games_each_year = pd.read_sql(query_games_each_year,conn)\n",
+    "total_games_each_year[\"Release Year\"]=total_games_each_year[\"Release Year\"].astype(\"Int64\")\n",
+    "total_games_each_year.set_index(\"Release Year\",inplace=True)\n",
+    "logger.info(\"Done! sql interogation on the table from database\")\n",
+    "total_games_each_year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d701dacd",
+   "metadata": {},
+   "source": [
+    "The low number of games release in 2024,2025,2026 is because there are 0 sales registered for PS5"
    ]
   },
   {
