sql queries file with all 35 sql interogations (to have the logic separate for a better visual)

--- a/PlayStation_Data_report.ipynb
+++ b/PlayStation_Data_report.ipynb
@@ -2100,7 +2100,7 @@
    "id": "17777d6e",
    "metadata": {},
    "source": [
-    "6) What developers has the most games made"
+    "6) What developers has the most games made?"
    ]
   },
   {
@@ -2337,7 +2337,7 @@
    "id": "1322fe3a",
    "metadata": {},
    "source": [
-    "8)Which genre have the biggest average rating"
+    "8)Which genre have the biggest average rating?"
    ]
   },
   {
@@ -5514,7 +5514,7 @@
    "id": "292271f4",
    "metadata": {},
    "source": [
-    "28) Which Publisher has the most diversity of genres in his portofolio "
+    "28) Which Publisher has the most diversity of genres in his portofolio?"
    ]
   },
   {
@@ -6082,7 +6082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1138,
+   "execution_count": null,
    "id": "b7dae846",
    "metadata": {},
    "outputs": [
@@ -6216,7 +6216,6 @@
    ],
    "source": [
     "query_peak_year_pub = \"\"\"\n",
-    "   \n",
     "    SELECT Publisher, [Total Sales], [Release Year]\n",
     "    FROM (SELECT Publisher, [Total Sales], [Release Year],\n",
     "            ROW_NUMBER() OVER(PARTITION BY Publisher ORDER BY [Total Sales] DESC) as rank\n",
